@@ -146,9 +146,9 @@ runGhcid waiter restart command outputfiles test size titles output = do
             output $ load ++ map (Plain,) msg ++ replicate (height - (length load + length msg)) (Plain,"")
 
     restartTimes <- mapM getModTime restart
-    outputFill Nothing ["Loading " ++ command ++ "..."]
+    outStrLn $ "Loading " ++ command ++ "..."
     nextWait <- waitFiles waiter
-    (ghci,messages) <- startGhci command Nothing
+    (ghci,messages) <- startGhci command Nothing True
     curdir <- getCurrentDirectory
 
     -- fire, given a waiter, the messages, and the warnings from last time
